pydbc/py2/dbcParser.py
# Generated from dbc.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class dbcParser ( Parser ):

    grammarFileName = "dbc.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'BO_TX_BU_'", u"':'", u"';'", u"'SIG_VALTYPE_'", 
                     u"'BO_'", u"'SG_'", u"'|'", u"'@'", u"'('", u"','", 
                     u"')'", u"'['", u"']'", u"'VAL_TABLE_'", u"'BU_'", 
                     u"'BS_'", u"'NS_'", u"'NS_DESC_'", u"'CM_'", u"'BA_DEF_'", 
                     u"'BA_'", u"'VAL_'", u"'CAT_DEF_'", u"'CAT_'", u"'FILTER'", 
                     u"'BA_DEF_DEF_'", u"'EV_DATA_'", u"'ENVVAR_DATA_'", 
                     u"'SGTYPE_'", u"'SGTYPE_VAL_'", u"'BA_DEF_SGTYPE_'", 
                     u"'BA_SGTYPE_'", u"'SIG_TYPE_REF_'", u"'SIG_GROUP_'", 
                     u"'SIGTYPE_VALTYPE_'", u"'BA_DEF_REL_'", u"'BA_REL_'", 
                     u"'BA_DEF_DEF_REL_'", u"'BU_SG_REL_'", u"'BU_EV_REL_'", 
                     u"'BU_BO_REL_'", u"'SG_MUL_VAL_'", u"'VERSION'", u"'EV_'", 
                     u"'INT'", u"'HEX'", u"'FLOAT'", u"'STRING'", u"'ENUM'", 
                     u"'BA_REL'", u"'Vector__XXX'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"VECTOR_XXX", 
                      u"DUMMY_NODE_VECTOR", u"C_IDENTIFIER", u"FLOAT", u"INT", 
                      u"WS", u"STRING", u"SIGN" ]

    RULE_dbcfile = 0
    RULE_messageTransmitters = 1
    RULE_messageTransmitter = 2
    RULE_signalExtendedValueTypeList = 3
    RULE_signalExtendedValueType = 4
    RULE_messages = 5
    RULE_message = 6
    RULE_signal = 7
    RULE_receiver = 8
    RULE_transmitter = 9
    RULE_multiplexerIndicator = 10
    RULE_valueTables = 11
    RULE_valueTable = 12
    RULE_valueDescription = 13
    RULE_nodes = 14
    RULE_bitTiming = 15
    RULE_newSymbols = 16
    RULE_version = 17
    RULE_valueDescriptions = 18
    RULE_valueDescriptionForSignal = 19
    RULE_valueDescriptionsForEnvVar = 20
    RULE_environmentVariables = 21
    RULE_environmentVariable = 22
    RULE_accessNodes = 23
    RULE_environmentVariablesData = 24
    RULE_environmentVariableData = 25
    RULE_signalTypes = 26
    RULE_signalType = 27
    RULE_comments = 28
    RULE_comment = 29
    RULE_attributeDefinitions = 30
    RULE_attributeDefinition = 31
    RULE_customAttributeDefinitions = 32
    RULE_customAttributeDefinition = 33
    RULE_attributeValueType = 34
    RULE_attributeDefaults = 35
    RULE_attributeDefault = 36
    RULE_customAttributeDefaults = 37
    RULE_customAttributeDefault = 38
    RULE_attributeValue = 39
    RULE_attributeValues = 40
    RULE_attributeValueForObject = 41
    RULE_customAttributeValues = 42
    RULE_customAttributeValueForObject = 43
    RULE_intValue = 44
    RULE_floatValue = 45
    RULE_number = 46

    ruleNames =  [ u"dbcfile", u"messageTransmitters", u"messageTransmitter", 
                   u"signalExtendedValueTypeList", u"signalExtendedValueType", 
                   u"messages", u"message", u"signal", u"receiver", u"transmitter", 
                   u"multiplexerIndicator", u"valueTables", u"valueTable", 
                   u"valueDescription", u"nodes", u"bitTiming", u"newSymbols", 
                   u"version", u"valueDescriptions", u"valueDescriptionForSignal", 
                   u"valueDescriptionsForEnvVar", u"environmentVariables", 
                   u"environmentVariable", u"accessNodes", u"environmentVariablesData", 
                   u"environmentVariableData", u"signalTypes", u"signalType", 
                   u"comments", u"comment", u"attributeDefinitions", u"attributeDefinition", 
                   u"customAttributeDefinitions", u"customAttributeDefinition", 
                   u"attributeValueType", u"attributeDefaults", u"attributeDefault", 
                   u"customAttributeDefaults", u"customAttributeDefault", 
                   u"attributeValue", u"attributeValues", u"attributeValueForObject", 
                   u"customAttributeValues", u"customAttributeValueForObject", 
                   u"intValue", u"floatValue", u"number" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    VECTOR_XXX=51
    DUMMY_NODE_VECTOR=52
    C_IDENTIFIER=53
    FLOAT=54
    INT=55
    WS=56
    STRING=57
    SIGN=58

    def __init__(self, input, output=sys.stdout):
        super(dbcParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DbcfileContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.DbcfileContext, self).__init__(parent, invokingState)
            self.parser = parser

        def version(self):
            return self.getTypedRuleContext(dbcParser.VersionContext,0)


        def newSymbols(self):
            return self.getTypedRuleContext(dbcParser.NewSymbolsContext,0)


        def bitTiming(self):
            return self.getTypedRuleContext(dbcParser.BitTimingContext,0)


        def nodes(self):
            return self.getTypedRuleContext(dbcParser.NodesContext,0)


        def valueTables(self):
            return self.getTypedRuleContext(dbcParser.ValueTablesContext,0)


        def messages(self):
            return self.getTypedRuleContext(dbcParser.MessagesContext,0)


        def messageTransmitters(self):
            return self.getTypedRuleContext(dbcParser.MessageTransmittersContext,0)


        def environmentVariables(self):
            return self.getTypedRuleContext(dbcParser.EnvironmentVariablesContext,0)


        def environmentVariablesData(self):
            return self.getTypedRuleContext(dbcParser.EnvironmentVariablesDataContext,0)


        def signalTypes(self):
            return self.getTypedRuleContext(dbcParser.SignalTypesContext,0)


        def comments(self):
            return self.getTypedRuleContext(dbcParser.CommentsContext,0)


        def attributeDefinitions(self):
            return self.getTypedRuleContext(dbcParser.AttributeDefinitionsContext,0)


        def customAttributeDefinitions(self):
            return self.getTypedRuleContext(dbcParser.CustomAttributeDefinitionsContext,0)


        def attributeDefaults(self):
            return self.getTypedRuleContext(dbcParser.AttributeDefaultsContext,0)


        def customAttributeDefaults(self):
            return self.getTypedRuleContext(dbcParser.CustomAttributeDefaultsContext,0)


        def attributeValues(self):
            return self.getTypedRuleContext(dbcParser.AttributeValuesContext,0)


        def customAttributeValues(self):
            return self.getTypedRuleContext(dbcParser.CustomAttributeValuesContext,0)


        def valueDescriptions(self):
            return self.getTypedRuleContext(dbcParser.ValueDescriptionsContext,0)


        def signalExtendedValueTypeList(self):
            return self.getTypedRuleContext(dbcParser.SignalExtendedValueTypeListContext,0)


        def getRuleIndex(self):
            return dbcParser.RULE_dbcfile

        def enterRule(self, listener):
            if hasattr(listener, "enterDbcfile"):
                listener.enterDbcfile(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDbcfile"):
                listener.exitDbcfile(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitDbcfile"):
                return visitor.visitDbcfile(self)
            else:
                return visitor.visitChildren(self)




    def dbcfile(self):

        localctx = dbcParser.DbcfileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_dbcfile)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.version()
            self.state = 95
            self.newSymbols()
            self.state = 96
            self.bitTiming()
            self.state = 97
            self.nodes()
            self.state = 98
            self.valueTables()
            self.state = 99
            self.messages()
            self.state = 100
            self.messageTransmitters()
            self.state = 101
            self.environmentVariables()
            self.state = 102
            self.environmentVariablesData()
            self.state = 103
            self.signalTypes()
            self.state = 104
            self.comments()
            self.state = 105
            self.attributeDefinitions()
            self.state = 106
            self.customAttributeDefinitions()
            self.state = 107
            self.attributeDefaults()
            self.state = 108
            self.customAttributeDefaults()
            self.state = 109
            self.attributeValues()
            self.state = 110
            self.customAttributeValues()
            self.state = 111
            self.valueDescriptions()
            self.state = 112
            self.signalExtendedValueTypeList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageTransmittersContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.MessageTransmittersContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._messageTransmitter = None # MessageTransmitterContext
            self.items = list() # of MessageTransmitterContexts

        def messageTransmitter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.MessageTransmitterContext)
            else:
                return self.getTypedRuleContext(dbcParser.MessageTransmitterContext,i)


        def getRuleIndex(self):
            return dbcParser.RULE_messageTransmitters

        def enterRule(self, listener):
            if hasattr(listener, "enterMessageTransmitters"):
                listener.enterMessageTransmitters(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMessageTransmitters"):
                listener.exitMessageTransmitters(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMessageTransmitters"):
                return visitor.visitMessageTransmitters(self)
            else:
                return visitor.visitChildren(self)




    def messageTransmitters(self):

        localctx = dbcParser.MessageTransmittersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_messageTransmitters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dbcParser.T__0:
                self.state = 114
                localctx._messageTransmitter = self.messageTransmitter()
                localctx.items.append(localctx._messageTransmitter)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageTransmitterContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.MessageTransmitterContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.messageID = None # Token

        def INT(self):
            return self.getToken(dbcParser.INT, 0)

        def transmitter(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.TransmitterContext)
            else:
                return self.getTypedRuleContext(dbcParser.TransmitterContext,i)


        def getRuleIndex(self):
            return dbcParser.RULE_messageTransmitter

        def enterRule(self, listener):
            if hasattr(listener, "enterMessageTransmitter"):
                listener.enterMessageTransmitter(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMessageTransmitter"):
                listener.exitMessageTransmitter(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMessageTransmitter"):
                return visitor.visitMessageTransmitter(self)
            else:
                return visitor.visitChildren(self)




    def messageTransmitter(self):

        localctx = dbcParser.MessageTransmitterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_messageTransmitter)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(dbcParser.T__0)
            self.state = 121
            localctx.messageID = self.match(dbcParser.INT)
            self.state = 122
            self.match(dbcParser.T__1)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dbcParser.C_IDENTIFIER:
                self.state = 123
                self.transmitter()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 129
            self.match(dbcParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalExtendedValueTypeListContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.SignalExtendedValueTypeListContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._signalExtendedValueType = None # SignalExtendedValueTypeContext
            self.items = list() # of SignalExtendedValueTypeContexts

        def signalExtendedValueType(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.SignalExtendedValueTypeContext)
            else:
                return self.getTypedRuleContext(dbcParser.SignalExtendedValueTypeContext,i)


        def getRuleIndex(self):
            return dbcParser.RULE_signalExtendedValueTypeList

        def enterRule(self, listener):
            if hasattr(listener, "enterSignalExtendedValueTypeList"):
                listener.enterSignalExtendedValueTypeList(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSignalExtendedValueTypeList"):
                listener.exitSignalExtendedValueTypeList(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSignalExtendedValueTypeList"):
                return visitor.visitSignalExtendedValueTypeList(self)
            else:
                return visitor.visitChildren(self)




    def signalExtendedValueTypeList(self):

        localctx = dbcParser.SignalExtendedValueTypeListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_signalExtendedValueTypeList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dbcParser.T__3:
                self.state = 131
                localctx._signalExtendedValueType = self.signalExtendedValueType()
                localctx.items.append(localctx._signalExtendedValueType)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalExtendedValueTypeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.SignalExtendedValueTypeContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.messageID = None # Token
            self.signalName = None # Token
            self.valType = None # Token

        def INT(self, i=None):
            if i is None:
                return self.getTokens(dbcParser.INT)
            else:
                return self.getToken(dbcParser.INT, i)

        def C_IDENTIFIER(self):
            return self.getToken(dbcParser.C_IDENTIFIER, 0)

        def getRuleIndex(self):
            return dbcParser.RULE_signalExtendedValueType

        def enterRule(self, listener):
            if hasattr(listener, "enterSignalExtendedValueType"):
                listener.enterSignalExtendedValueType(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitSignalExtendedValueType"):
                listener.exitSignalExtendedValueType(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitSignalExtendedValueType"):
                return visitor.visitSignalExtendedValueType(self)
            else:
                return visitor.visitChildren(self)




    def signalExtendedValueType(self):

        localctx = dbcParser.SignalExtendedValueTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_signalExtendedValueType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(dbcParser.T__3)
            self.state = 138
            localctx.messageID = self.match(dbcParser.INT)
            self.state = 139
            localctx.signalName = self.match(dbcParser.C_IDENTIFIER)
            self.state = 140
            self.match(dbcParser.T__1)
            self.state = 141
            localctx.valType = self.match(dbcParser.INT)
            self.state = 142
            self.match(dbcParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessagesContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.MessagesContext, self).__init__(parent, invokingState)
            self.parser = parser
            self._message = None # MessageContext
            self.items = list() # of MessageContexts

        def message(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.MessageContext)
            else:
                return self.getTypedRuleContext(dbcParser.MessageContext,i)


        def getRuleIndex(self):
            return dbcParser.RULE_messages

        def enterRule(self, listener):
            if hasattr(listener, "enterMessages"):
                listener.enterMessages(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMessages"):
                listener.exitMessages(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMessages"):
                return visitor.visitMessages(self)
            else:
                return visitor.visitChildren(self)




    def messages(self):

        localctx = dbcParser.MessagesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_messages)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dbcParser.T__4:
                self.state = 144
                localctx._message = self.message()
                localctx.items.append(localctx._message)
                self.state = 149
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MessageContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.MessageContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.ma = None # Token
            self.messageID = None # Token
            self.messageName = None # Token
            self.messageSize = None # Token
            self.transmt = None # Token
            self._signal = None # SignalContext
            self.sgs = list() # of SignalContexts

        def INT(self, i=None):
            if i is None:
                return self.getTokens(dbcParser.INT)
            else:
                return self.getToken(dbcParser.INT, i)

        def C_IDENTIFIER(self, i=None):
            if i is None:
                return self.getTokens(dbcParser.C_IDENTIFIER)
            else:
                return self.getToken(dbcParser.C_IDENTIFIER, i)

        def VECTOR_XXX(self):
            return self.getToken(dbcParser.VECTOR_XXX, 0)

        def signal(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.SignalContext)
            else:
                return self.getTypedRuleContext(dbcParser.SignalContext,i)


        def getRuleIndex(self):
            return dbcParser.RULE_message

        def enterRule(self, listener):
            if hasattr(listener, "enterMessage"):
                listener.enterMessage(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMessage"):
                listener.exitMessage(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitMessage"):
                return visitor.visitMessage(self)
            else:
                return visitor.visitChildren(self)




    def message(self):

        localctx = dbcParser.MessageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_message)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            localctx.ma = self.match(dbcParser.T__4)
            self.state = 151
            localctx.messageID = self.match(dbcParser.INT)
            self.state = 152
            localctx.messageName = self.match(dbcParser.C_IDENTIFIER)
            self.state = 153
            self.match(dbcParser.T__1)
            self.state = 154
            localctx.messageSize = self.match(dbcParser.INT)
            self.state = 155
            localctx.transmt = self._input.LT(1)
            _la = self._input.LA(1)
            if not(_la==dbcParser.VECTOR_XXX or _la==dbcParser.C_IDENTIFIER):
                localctx.transmt = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 159
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==dbcParser.T__5:
                self.state = 156
                localctx._signal = self.signal()
                localctx.sgs.append(localctx._signal)
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SignalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(dbcParser.SignalContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.ma = None # Token
            self.signalName = None # Token
            self.mind = None # MultiplexerIndicatorContext
            self.startBit = None # Token
            self.signalSize = None # Token
            self.byteOrder = None # Token
            self.valueType = None # Token
            self.factor = None # NumberContext
            self.offset = None # NumberContext
            self.minimum = None # NumberContext
            self.maximum = None # NumberContext
            self.unit = None # Token
            self.rcv = None # ReceiverContext

        def C_IDENTIFIER(self):
            return self.getToken(dbcParser.C_IDENTIFIER, 0)

        def INT(self, i=None):
            if i is None:
                return self.getTokens(dbcParser.INT)
            else:
                return self.getToken(dbcParser.INT, i)

        def SIGN(self):
            return self.getToken(dbcParser.SIGN, 0)

        def number(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(dbcParser.NumberContext)
            else:
                return self.getTypedRuleContext(dbcParser.NumberContext,i)


        def STRING(self):
            return self.getToken(dbcParser.STRING, 0)

        def receiver(self):
            return self.getTypedRuleContext(dbcParser.ReceiverContext,0)


        def multiplexerIndicator(self):
            return self.getTypedRuleContext(dbcParser.MultiplexerIndicatorContext,0)


        def getRuleIndex(self):
            return dbcParser.RULE_signal

        def enterRule(self, listener):
            if hasattr(listener, "enterSignal"):
                listener.enterSignal(self)
